--- a/index.html
+++ b/index.html
@@ -34,26 +34,28 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "three": "https://esm.sh/three@^0.182.0",
-    "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
     "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
+    "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
+    "three": "https://esm.sh/three@^0.182.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
-    "http": "https://esm.sh/http@^0.0.1-security",
-    "socket.io": "https://esm.sh/socket.io@^4.8.3",
-    "socket.io-client": "https://esm.sh/socket.io-client@^4.8.3",
     "express": "https://esm.sh/express@^5.2.1",
-    "@react-three/cannon": "https://esm.sh/@react-three/cannon@^6.6.0"
+    "path": "https://esm.sh/path@^0.12.7",
+    "socket.io-client": "https://esm.sh/socket.io-client@^4.8.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react": "https://esm.sh/react@^19.2.4",
+    "url": "https://esm.sh/url@^0.11.4",
+    "@react-three/cannon": "https://esm.sh/@react-three/cannon@^6.6.0",
+    "socket.io": "https://esm.sh/socket.io@^4.8.3",
+    "http": "https://esm.sh/http@^0.0.1-security"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <!-- CRITICAL FIX: Link to the main React entry point -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
